# sentinal_ACSF

./: .gitignore  DELIVERABLES_Nikhil_Day1.md  DELIVERABLES_Nikhil_Day2.md  README.md  pyproject.toml  render.yaml  requirements-audit.txt  requirements.txt
api/: index.py
app/: _compat.py  config.py  main.py
app/_placeholders/: __init__.py  context.py
app/assistant/: __init__.py  client.py  stub.py
app/audit/: __init__.py  backends.py  logger.py  models.py  queries.py  schema.sql  schema_sqlite.sql
app/escalation/: __init__.py  queue.py
app/identity/: context.py  eim_client.py
app/monitoring/: __init__.py  ratelimit.py  signals.py
app/pdp/: combiner.py  decision.py  factory.py  output_scanner.py  pipeline.py
app/pdp/authz/: cedar_engine.py  rbac.py  scope.py
app/pdp/detectors/: __init__.py  base.py  injection.py  intent.py  pii.py  secrets.py
app/pep/: __init__.py  audit_hook.py  enforcement.py  ingress.py
app/policy/: models.py  store.py  watcher.py
app/ui/: index.html
docs/: DAY2_INTEGRATION.md  INTEGRATION.md  audit_log.md  false_positives.md  v2_backlog.md
policies/v1/: authz.cedar  catalog.yaml
scripts/: audit_demo.py  audit_report.py  init_audit_db.py
tests/: smoke.py  smoke_test.py  test_audit_sink.py  test_combiner.py  test_decision.py  test_detectors.py  test_e2e_redteam_pep.py  test_egress_enforcement.py  test_enforcement.py  test_factory.py  test_integration_redteam.py  test_models.py  test_output_scanner.py  test_pipeline.py  test_secrets_detector.py  test_store.py  test_ui.py  test_watcher.py
tests/audit/: test_logger.py  test_models.py  test_queries.py
tests/detectors/: conftest.py  smoke.py  test_detectors.py  test_false_positive.py
tests/eval/: harness.py  latency.py  test_latency_gate.py  test_redteam_gate.py
tests/redteam/: prompts.yaml
tests/test_auth/: test_cedar_engine.py  test_context.py  test_eim.py  test_rbac.py  test_scope.py
