[project]
name = "sentinel-acsf"
version = "0.1.0"
description = "Sentinel policy enforcement point with audit and monitoring stubs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Sentinel Team" } ]

# Runtime deps actually imported today. Heavy/optional libs (presidio, cedar,
# asyncpg) are isolated in optional-dependencies so a base install never fails.
dependencies = [
    "fastapi>=0.114.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",          # policy loader reads policies/v1/catalog.yaml
]

[project.optional-dependencies]
audit = [ "asyncpg>=0.29.0" ]
detectors = [ "presidio-analyzer>=2.2.0", "presidio-anonymizer>=2.2.0", "pybloom-live>=4.0.0" ]
dev = [ "pytest>=7.0", "httpx>=0.27" ]

[tool.setuptools]
packages = [
    "app",
    "app.assistant",
    "app.audit",
    "app.escalation",
    "app.identity",
    "app.monitoring",
    "app.pdp",
    "app.pdp.authz",
    "app.pdp.detectors",
    "app.pep",
    "app.policy",
]

[build-system]
requires = [ "setuptools>=65.0.0", "wheel" ]
build-backend = "setuptools.build_meta"
